--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon app.js"
     },
     "keywords": [],
     "author": "Rogerio <rogerio@email.com>",
@@ -14,8 +15,17 @@
         "@babel/eslint-parser": "^7.22.10",
         "@types/node": "^20.4.8",
         "eslint": "^8.46.0",
+        "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-import": "^2.28.0",
         "eslint-plugin-prettier": "^5.0.0",
+        "nodemon": "^3.0.1",
         "prettier": "^3.0.1"
+    },
+    "dependencies": {
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
+        "mongoose": "^7.4.2"
     }
 }
